percentage span now showing, adjusted margins for h2 headings, removed srub from GSAP chrono-animation, removed useless MobileContext call in Intro

--- a/src/Components/Technologies/Technologies.scss
+++ b/src/Components/Technologies/Technologies.scss
@@ -235,6 +235,7 @@ $percentage-wheel: 80px;
                 border-radius: 50%;
                 > span {
                     position: absolute;
+                    z-index: 1;
                     width: 100%;
                     left: 0;
                     top: 0;
