--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -93,14 +93,16 @@ h1, h2, h3, h4, h5, h6 {
     color: $classes;
 }
 h1 {
-    font-size: 2rem;
+    margin-top: 2.5rem;
+    font-size: 3rem;
+    margin-bottom: 2.5rem;
 }
 h2 {
     position: relative;
     text-align: center;
-    margin-top: .5rem;
+    margin-top: 2rem;
     font-size: 2.5rem;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
 }
 h3 {
     margin-top: .25rem;
